--- a/VintageJewelry_Store/templates/index.html
+++ b/VintageJewelry_Store/templates/index.html
@@ -1,39 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html ng-app="asusShop">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>| Vintage Jewelry Store</title>
+	<meta charset="utf-8">
+	<title>| Vintage Jewelry Store</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/registration.css' %}" >
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-   
-</head>
+   </head>
 <body>
-<h1>Registration</h1>
-<div class="container">
-    <form id="registration">
-    {% csrf_token %}
-    {% for field in form %}
-    <div class="form-group row">
-      <label class="col-sm-2 col-form-label">
-      <strong>{{ field.label }}</strong>
-      </label>
-      <div class="col-sm-10">
-      {{ field }}
-      </div>
-    </div>
-    {% endfor %}
-    <div class="form-group row">
-    <button type="submit" id="Url" data-url="{% url 'register' %}"> Register </button>
-    </div>
-    <form>
+    <div id="wrap">
+    <header>
+        <div class = "title">Wellcome to Vintage Jewelry store </div>
+        <ul class = "menu">
+            <li><a id="Login" href="login.html">Login</a></li>
+            <li><a id="CreateAccount" href="{% url 'new_user' %}">Create an Account</a></li>
+            <li><a id="WishList" href="wishlist.html">Wish List</a></li>
+        </ul>
+    </header>
 </div>
+	<div class="post-container">
+		Sort: 
+		<select id="selectid" name="selectsort" onchange="func1()">
+			<option value="price_asc" id="asc"> Ascending by price </option>
+			<option value="price_desc" id="desc"> Desceding by price</option>
+		</select>
+		Search: 
+		<input id="searchfield" onchange="func1()">
+		</select>
+	</div>
+	<div class="main-container" id="products">
+	</div>
+	<div class="loading" style="display: none;">
+		Loading...
+	  </div>
+
+<!-- Modal Product Info -->
+<div class="modal fade" id="productInfoModal" tabindex="-1" role="dialog" aria-labelledby="productInfoLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <h5 class="modal-title" id="productInfoLabel">Product Info</h5>
+		  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			<span aria-hidden="true">&times;</span>
+		  </button>
+		</div>
+		<div class="modal-body">
+			<img class="card-img-top" src="" alt="">
+			<h4 class="card-name"></h4>
+			<h6 class="card-brand">Brandname: </h6>
+			<h6 class="card-material">Material: </h6>
+			<p class="card-description">Description: </p>
+			<p class="card-amount">Amount: </p>
+		</div>
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+		  <button class="btn btn-primary buy" data-id="id">Buy</button>
+		</div>
+	  </div>
+	</div>
+  </div>
+</div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 {% load static %}
-<script src="{% static 'js/registration.js' %}"></script>
+<script defer src="{% static 'js/products.js' %}"></script>
 </body>
 </html>
+
